@@ -1,2 +1,8 @@
 # JavaCheckersGame-v3
 Java Checkers for Deliverable 4 SER216
+
+There's a couple things required for functional JavaFX instructions below:
+Under run configurations for the file, Arguments -> VM Arguments -> paste "--module-path ["locationOfDownloadedJavaFXFolder"] --add-modules javafx.controls,javafx.graphics,javafx.fxml"
+Then in 'Properties' of the file, JavaBuildPath-> Libraries -> Remove JavaFX from classpath -> Add JavaFX to modulePath -> apply and close
+
+this youtube video explains it clearer [https://www.youtube.com/watch?v=nz8P528uGjk]
